Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14262

explorer systray notification area - icon crosstalk on NIS_SHARED or NIS_HIDDEN

    XMLWordPrintable

Details

    • 332652615adb97c3b328d558f5f3eb21a902afa1
    • 68,893

    Description

      We have Icon Crosstalk again in ros 0.4.8dev-871-gdc85171 gcc dbg.

      Steps to reproduce:
      -directly after 3rd stage bootup
      -install TightVNC 2.7.10 from rapps

      Expected results:
      -systray gets one TVNC icon, no other applications icon gets corrupted

      Observed result:
      -we get 2 TightVNC icons, its left neighbors icon gets corrupted

      TightVNC uses NIS_SHARED or NIS_HIDDEN icons, which might play a role.

      0.4.8-dev-871-gdc85171.png
      0.4.8-dev-871-crosstalk.webm

      But react.log shows nothing.

      Attachments

        1. ReactOS_1028_g0e932c7_TightVNC.png
          90 kB
          DougLyons
        2. react.log
          319 kB
          reactosfanboy
        3. PR1667_properly_fixes_CORE-14262.webm
          903 kB
          reactosfanboy
        4. PR1667_CORE-14262_2commits_592c04d_fortestBot.diff
          3 kB
          reactosfanboy
        5. CORE-14262_tightVNC_regressionTest.txt
          3 kB
          reactosfanboy
        6. 0.4.8RC25-ExplorerOLD_worksLikeACharm.png
          30 kB
          reactosfanboy
        7. 0.4.8-dev-912-g2d69520.png
          48 kB
          reactosfanboy
        8. 0.4.8-dev-871-gdc85171.png
          25 kB
          reactosfanboy
        9. 0.4.8-dev-871-crosstalk.webm
          435 kB
          reactosfanboy

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: