[0.4.12][EXPLORER] Properly initialize tbBtn.iBitmap. CORE-14262 PR#1667

In CNotifyToolbar::AddButton tbBtn.iBitmap (imagelist-index)
was initialized with 0. TightVNC adds the icon without NIF_ICON flag.
So the wrong icon index was kept and later replaced.

This fixes an old regression visible since SVN r68893

cherry picked from commit 0.4.13-dev-481-g
8d6c9e844c9b5e8a33344c9768e0d2fa305445c5